@@ -4,7 +4,10 @@ CHANGES
 0.9.5 (unreleased)
 ==================
 
-* ...
+* ``scan_for_classes`` just needs a single second argument specifying
+  an interface. The support for scanning for subclasses directly has
+  been removed as it became unnecessary (due to changes in
+  grokcore.component).
 
 0.9.4 (2008-05-04)
 ==================
